Add missing exports and opens declarations